<resources>
    <string name="app_name">Awala Ping</string>

    <!-- Common -->
    <string name="copy">Copy</string>
    <string name="copy_confirm">Copied to clipboard</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="send">Send</string>

    <!-- Pings -->
    <string name="ping">Ping</string>
    <string name="ping_sent">Ping sent</string>
    <string name="ping_sent_and_replied">Ping sent and pong received</string>
    <string name="ping_expired">Ping sent but pong expired</string>
    <string name="ping_sent_at">Sent at</string>
    <string name="ping_expires_at">Time out</string>
    <string name="ping_id">ID</string>
    <string name="ping_pong_received_at">Pong received at</string>
    <string name="ping_to">To *</string>
    <string name="ping_send_error">Error sending ping</string>
    <string name="ping_sending">Sending ping</string>
    <string name="ping_state_sent">Pong pending</string>
    <string name="ping_state_replied">Pong received</string>
    <string name="ping_state_expired">Timed out</string>

    <!-- Peers -->
    <string name="peer">Endpoint</string>
    <string name="peers">Endpoints</string>
    <string name="peers_picker">Select an endpoint</string>
    <string name="peer_public">Public Endpoint</string>
    <string name="peer_private">Private Endpoint</string>
    <string name="peer_add">Add Endpoint</string>
    <string name="peer_private_address">Private Address</string>
    <string name="peer_delete_confirm">Are you sure you want to delete this Endpoint?</string>
    <string name="peer_address_label">Address *</string>
    <string name="peer_address_hint">Type an address</string>
    <string name="peer_certificate_label">Identity Certificate *</string>
    <string name="peer_certificate_button">Upload certificate</string>
    <string name="peer_certificate_picked">Certificate picked</string>
    <string name="peer_add_error">Error saving new peer</string>
    <string name="peer_add_invalid_address">Invalid Address</string>
    <string name="peer_add_missing_certificate">Missing Identity Certificate</string>
    <string name="peer_add_invalid_certificate">Invalid Identity Certificate</string>

    <!-- About -->
    <string name="about">About</string>
    <string name="about_version">Version %1$s (%2$s)</string>
    <string name="about_learn_more">Learn more about Awala</string>
    <string name="about_open_libraries">See open source libraries</string>
    <string name="about_licenses">Open Source Libraries</string>

    <!-- No Gateway -->
    <string name="no_gateway_title">Awala doesn\'t appear\nto be installed</string>
    <string name="no_gateway_message">Install Awala so that you can\nuse this app.</string>
    <string name="no_gateway_download">Install Awala</string>
    <string name="no_gateway_download_other">Other download options</string>

    <!-- Units -->
    <string name="minutes">Minutes</string>
    <string name="hours">Hours</string>
    <string name="days">Days</string>
    <string name="months">Months</string>

</resources>
