<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/common_app_bar" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                android:paddingVertical="24dp">

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/peer_public"
                    android:src="@drawable/ic_public" />

                <TextView
                    android:id="@+id/recipient"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.Ping.Body"
                    tools:text="ping.awala.services" />

                <TextView
                    android:id="@+id/state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:gravity="center_horizontal"
                    android:textAppearance="@style/TextAppearance.Ping.Body2"
                    tools:text="@string/ping_state_replied" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="?android:listDivider" />

            <tech.relaycorp.ping.ui.common.FieldView
                android:id="@+id/pingIdField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:copyEnabled="true"
                app:label="@string/ping_id" />

            <tech.relaycorp.ping.ui.common.FieldView
                android:id="@+id/sentAtField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:label="@string/ping_sent_at" />

            <tech.relaycorp.ping.ui.common.FieldView
                android:id="@+id/expiresAtField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:label="@string/ping_expires_at" />

            <tech.relaycorp.ping.ui.common.FieldView
                android:id="@+id/pongReceivedField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:label="@string/ping_pong_received_at" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
