<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <include layout="@layout/common_app_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="64dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:text="@string/no_gateway_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:gravity="center_horizontal"
            android:text="@string/no_gateway_message" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/download"
            style="@style/Widget.Ping.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/no_gateway_download"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/downloadOther"
            style="@style/Widget.Ping.Button.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/no_gateway_download_other"
            android:textSize="14sp" />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
