<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.AboutActivity">

    <include layout="@layout/common_app_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_info"
            app:tint="?iconTint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="2dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/app_name" />

            <TextView
                android:id="@+id/version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textAppearance="@style/TextAppearance.Ping.Body2"
                android:textIsSelectable="true"
                tools:text="@string/about_version" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/learnMore"
                style="@style/Widget.Ping.Button.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-8dp"
                android:layout_marginBottom="4dp"
                android:text="@string/about_learn_more"
                tools:ignore="NegativeMargin" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/libraries"
                style="@style/Widget.Ping.Button.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-8dp"
                android:layout_marginBottom="4dp"
                android:text="@string/about_open_libraries"
                tools:ignore="NegativeMargin" />

        </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
