<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.peers.AddPublicPeerActivity">

    <include layout="@layout/common_app_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/Widget.Ping.Label"
                android:labelFor="@id/addressEdit"
                android:text="@string/peer_address_label" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addressEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:hint="@string/peer_address_hint"
                android:inputType="textUri"
                android:maxLines="1" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="?android:listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/Widget.Ping.Label"
                android:text="@string/peer_certificate_label" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/certificateButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/peer_certificate_button"
                tools:visibility="gone" />

            <TextView
                android:id="@+id/certificateName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="?colorPrimary"
                android:visibility="gone"
                tools:text="file.der"
                tools:visibility="visible" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/certificateClear"
                style="@style/Widget.Ping.Button.Image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:visibility="gone"
                app:icon="@drawable/ic_clear"
                tools:visibility="visible" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="?android:listDivider" />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
