<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.peers.AddPublicPeerActivity">

    <include layout="@layout/common_app_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/Widget.Ping.Label"
                android:labelFor="@id/toButton"
                android:text="@string/ping_to" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/toButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/peers_picker"
                app:icon="@drawable/ic_peers"
                tools:visibility="gone" />

            <com.google.android.material.chip.Chip
                android:id="@+id/toPeer"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:visibility="gone"
                app:chipIcon="@drawable/ic_public"
                tools:text="ping.awala.services"
                tools:visibility="visible" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="?android:listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/Widget.Ping.Label"
                android:text="@string/ping_expires_at" />

            <Spinner
                android:id="@+id/expiresAtValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/expiresAtUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="?android:listDivider" />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
